--- a/base/templates/base/dashboard.html
+++ b/base/templates/base/dashboard.html
@@ -5,9 +5,9 @@
         <div>
             <div class="flex flex-row justify-between items-center w-full">
                 <h1 class="text-2xl font-semibold">Accounts</h1>
-                <a href="#"><p class="text-[12px] text-gray-400">View all<i class="ml-2 fa-solid fa-chevron-right"></i></p></a>
+                <a href="/accounts"><p class="text-[12px] text-gray-400">View all<i class="ml-2 fa-solid fa-chevron-right"></i></p></a>
             </div>
-            <div class="w-full mt-4 h-fit bg-gradient-to-r from-[#485563] to-[#29323c] shadow-xl rounded-lg px-6 py-2 flex flex-col gap-6">
+            <div class="w-full mt-4 h-40 bg-gradient-to-r from-[#485563] to-[#29323c] shadow-xl rounded-lg p-6 flex flex-col justify-between gap-6">
                 <h2 class="text-xl text-white font-semibold">My savings</h2>
                 <div>
                     <p class="text-[12px] text-white font-light">Total balance</p>
@@ -34,44 +34,44 @@
                 </div>
                 <div class="flex flex-col gap-4 mt-4">
                     <div class="flex flex-row items-center justify-between">
-                        <div class="flex flex-row items-center gap-4">
+                        <div class="flex flex-row w-full items-center gap-4">
                             <i class="fa-solid fa-credit-card"></i>
-                            <div>
+                            <div class="w-full">
                                 <h4 class="text-sm font-semibold">Nike store</h4>
                                 <p class="text-[12px] text-gray-400">Nike</p>
                             </div>
+                            <p class="text-sm font-semibold">-$100,00</p>
                         </div>
-                        <p class="text-sm font-semibold">-$100,00</p>
                     </div>
                     <div class="flex flex-row items-center justify-between">
-                        <div class="flex flex-row items-center gap-4">
+                        <div class="flex flex-row w-full items-center gap-4">
                             <i class="fa-solid fa-credit-card"></i>
-                            <div>
+                            <div class="w-full">
                                 <h4 class="text-sm font-semibold">Nike store</h4>
                                 <p class="text-[12px] text-gray-400">Nike</p>
                             </div>
+                            <p class="text-sm font-semibold">-$100,00</p>
                         </div>
-                        <p class="text-sm font-semibold">-$100,00</p>
                     </div>
                     <div class="flex flex-row items-center justify-between">
-                        <div class="flex flex-row items-center gap-4">
+                        <div class="flex flex-row w-full items-center gap-4">
                             <i class="fa-solid fa-credit-card"></i>
-                            <div>
+                            <div class="w-full">
                                 <h4 class="text-sm font-semibold">Nike store</h4>
                                 <p class="text-[12px] text-gray-400">Nike</p>
                             </div>
+                            <p class="text-sm font-semibold">-$100,00</p>
                         </div>
-                        <p class="text-sm font-semibold">-$100,00</p>
                     </div>
                     <div class="flex flex-row items-center justify-between">
-                        <div class="flex flex-row items-center gap-4">
+                        <div class="flex flex-row w-full items-center gap-4">
                             <i class="fa-solid fa-credit-card"></i>
-                            <div>
+                            <div class="w-full">
                                 <h4 class="text-sm font-semibold">Nike store</h4>
                                 <p class="text-[12px] text-gray-400">Nike</p>
                             </div>
+                            <p class="text-sm font-semibold">-$100,00</p>
                         </div>
-                        <p class="text-sm font-semibold">-$100,00</p>
                     </div>
                 </div>
             </div>
