--- a/templates/bottombar.html
+++ b/templates/bottombar.html
@@ -13,7 +13,7 @@
         <a href="/profile/"><i id="profile" class="fa-solid fa-user text-2xl"></i></a>
       </li>
       <li class="menu-item">
-        <a href="#"><i id="settings" class="fa-solid fa-gear text-2xl"></i></a>
+        <a href="/settings"><i id="settings" class="fa-solid fa-gear text-2xl"></i></a>
       </li>
     </ul>
   </nav>
