--- a/authsystem/templates/authsystem/sign_up.html
+++ b/authsystem/templates/authsystem/sign_up.html
@@ -13,23 +13,23 @@
                {% csrf_token %}
                <div class="flex flex-col gap-4">
                    <div class="flex flex-col">
-                       <label class="text-[12px] text-bold" for="first_name">Firstname</label>
+                       <label class="text-[12px] font-semibold" for="first_name">Firstname</label>
                        {{form.first_name}}
                     </div>
                     <div class="flex flex-col">
-                       <label class="text-[12px] text-bold" for="last_name">Lastname</label>
+                       <label class="text-[12px] font-semibold" for="last_name">Lastname</label>
                        {{form.last_name}}
                     </div>
                     <div class="flex flex-col">
-                       <label class="text-[12px] text-bold" for="phone">Phone</label>
+                       <label class="text-[12px] font-semibold" for="phone">Phone</label>
                        {{form.phone}}
                     </div>
                   <div class="flex flex-col">
-                     <label class="text-[12px] text-bold" for="email">Email</label>
+                     <label class="text-[12px] font-semibold" for="email">Email</label>
                      {{form.email}}
                   </div>
                   <div class="flex flex-col">
-                     <label class="text-[12px] text-bold" for="email">Password</label>
+                     <label class="text-[12px] font-semibold" for="email">Password</label>
                      {{form.password}}
                   </div>
                </div>
