Minor template refactor

--- a/base/templates/base/account_list.html
+++ b/base/templates/base/account_list.html
@@ -15,7 +15,7 @@
         </div>
       </a>
       {% empty %}
-        <p>You have no accounts. Please create one</p>
+        <p class="text-sm text-gray-400">You have no accounts</p>
       {% endfor %}
     </div>
     <a href="/accounts/new" class="bg-primary fixed bottom-20 right-6 flex items-center justify-center rounded-full w-12 h-12 z-10 shadow-2xl">
