Refactor sidebar responsiveness

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,4 +1,4 @@
-<nav class="w-20 h-screen bg-red-500 hidden md:flex">
+<nav class="w-20 h-screen bg-red-500 hidden lg:flex">
   <ul>
     <li>
       <i class="fa-solid fa-house"></i>
