--- a/templates/bottombar.html
+++ b/templates/bottombar.html
@@ -7,7 +7,7 @@
         <a href="/accounts/"><i id="accounts" class="fa-solid fa-wallet text-2xl"></i></a>
       </li>
       <li class="menu-item">
-       <a href="/transactions/"> <i id="transactions" class="fa-solid fa-money-bill-transfer text-2xl"></i></a>
+       <a href="/transfer/"> <i id="transfer" class="fa-solid fa-money-bill-transfer text-2xl"></i></a>
       </li>
       <li class="menu-item">
         <a href="/profile/"><i id="profile" class="fa-solid fa-user text-2xl"></i></a>
