--- a/authsystem/templates/authsystem/sign_in.html
+++ b/authsystem/templates/authsystem/sign_in.html
@@ -13,11 +13,11 @@
                {% csrf_token %}
                <div class="flex flex-col gap-4">
                   <div class="flex flex-col">
-                     <label class="text-[12px] text-bold" for="email">Email</label>
+                     <label class="text-[12px] font-bold" for="email">Email</label>
                      {{form.email}}
                   </div>
                   <div class="flex flex-col">
-                     <label class="text-[12px] text-bold" for="email">Password</label>
+                     <label class="text-[12px] font-bold" for="email">Password</label>
                      {{form.password}}
                   </div>
                </div>
