Add external bank toggle to template

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load static %}
+{% load static %} 
 {% load tailwind_tags %}
 <html lang="en">
   <head>
@@ -11,12 +11,13 @@
     <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
     <script src="{% static 'js/navbar.js' %}"></script>
     <script src="{% static 'js/dashboard.js' %}"></script>
+    <script src="{% static 'js/transfer.js' %}"></script>
     <link
       href="{% static 'fontawesomefree/css/all.min.css' %}"
       rel="stylesheet"
       type="text/css"
     />
-    
+
     <title>Bank Buddy</title>
   </head>
   <body>
@@ -30,4 +31,4 @@
       {% endif %}
     </div>
   </body>
-  </html>
+</html>
