--- a/templates/bottombar.html
+++ b/templates/bottombar.html
@@ -1,5 +1,5 @@
-<nav class="flex flex-row w-screen fixed bottom-0 bg-white shadow-main">
-    <ul id="menu-items" class="flex flex-row w-full justify-around py-4">
+<nav class="flex flex-row w-screen fixed bottom-0 bg-white shadow-main py-4">
+    <ul id="menu-items" class="flex flex-row w-full justify-around">
       <li class="active-menu-item">
         <a href="/dashboard/"><i class="fa-solid fa-house text-2xl"></i></a>
       </li>
