--- a/base/templates/base/dashboard.html
+++ b/base/templates/base/dashboard.html
@@ -1,57 +1,50 @@
 {% extends 'main.html' %}
 
 {% block content %}
-    <div>
-        <div class="flex flex-row justify-between items-center w-full">
-            <h1 class="text-2xl font-semibold">Accounts</h1>
-            <a href="/accounts"><p class="text-[12px] text-gray-400">View all<i class="ml-2 fa-solid fa-chevron-right"></i></p></a>
-        </div>
-        {% if account %}
-        <div class="w-full mt-4 h-40 bg-gradient-to-r from-[#485563] to-[#29323c] shadow-xl rounded-lg p-6 flex flex-col justify-between gap-6">
-            <h2 class="text-xl text-white font-semibold">{{account.name}}</h2>
-            <div>
-                <p class="text-[12px] text-white font-light">Total balance</p>
-                <h3 class="text-lg text-white font-semibold">{{account.balance}}</h3>
-            </div>
-        </div>
-        {% else %}
-            <a class="text-primary text-sm" href="/accounts/new">Create an account</a>
-        {% endif %}
+    <div class="flex flex-row justify-between items-center w-full">
+        <h1 class="text-2xl font-semibold">Accounts</h1>
+        <a href="/accounts"><p class="text-[12px] text-gray-400">View all<i class="ml-2 fa-solid fa-chevron-right"></i></p></a>
     </div>
-    <div>
-        <h1 class="text-2xl font-semibold">Transactions</h1>
+    {% if account %}
+    <a href="/accounts/{{account.account_no}}" class="w-full mt-4 h-40 bg-gradient-to-r from-[#485563] to-[#29323c] shadow-xl rounded-lg p-6 flex flex-col justify-between gap-6">
+        <h2 class="text-xl text-white font-semibold">{{account.name}}</h2>
         <div>
-            <div id="transaction-options" class="flex flex-row gap-4 mt-2">
-                <a href="/dashboard/" id="all-transactions" class="relative text-sm font-normal" href="#">
-                    <h5>All</h5>
-                </a>
-                <a href="/dashboard/?q=credit" id="credit-transactions" class="relative text-sm font-normal" href="#">
-                    <h5>Incoming</h5>
-                </a>
-                <a href="/dashboard/?q=debit" id="debit-transactions" class="relative text-sm font-normal" href="#">
-                    <h5>Expenses</h5>
-                </a>
-            </div>
-            <div class="flex flex-col gap-4 mt-4">
-                {% for transaction in transactions %}
-                <div class="flex flex-row items-center justify-between">
-                    <div class="flex flex-row w-full items-center gap-4">
-                        <i class="fa-solid fa-credit-card"></i>
-                        <div class="w-full">
-                            <h4 class="text-sm font-semibold">{{transaction.message}}</h4>
-                            <p class="text-[12px] text-gray-400">{{account.created_at|date:"d M Y"}}</p>
-                        </div>
-                        {% if transaction.type == 1 %}
-                        <p class="text-sm font-semibold text-green-600">+${{transaction.amount}}</p>
-                        {% else %}
-                            <p class="text-sm font-semibold text-red-600">-${{transaction.amount}}</p>
-                        {% endif %}
-                    </div>
+            <p class="text-[12px] text-white font-light">Total balance</p>
+            <h3 class="text-lg text-white font-semibold">{{account.balance}}</h3>
+        </div>
+    </a>
+    {% else %}
+        <a class="text-primary text-sm" href="/accounts/new">Create an account</a>
+    {% endif %}
+    <h1 class="text-2xl font-semibold mt-4">Transactions</h1>
+    <div id="transaction-options" class="flex flex-row gap-4 mt-2">
+        <a href="/dashboard/" id="all-transactions" class="relative text-sm font-normal" href="#">
+            <h5>All</h5>
+        </a>
+        <a href="/dashboard/?q=credit" id="credit-transactions" class="relative text-sm font-normal" href="#">
+            <h5>Incoming</h5>
+        </a>
+        <a href="/dashboard/?q=debit" id="debit-transactions" class="relative text-sm font-normal" href="#">
+            <h5>Expenses</h5>
+        </a>
+    </div>
+    <div class="flex flex-col gap-4 mt-4">
+        {% for transaction in transactions %}
+        <div class="flex flex-row items-center justify-between">
+            <div class="flex flex-row w-full items-center gap-4">
+                <i class="fa-solid fa-credit-card"></i>
+                <div class="w-full">
+                    <h4 class="text-sm font-semibold">{{transaction.message}}</h4>
+                    <p class="text-[12px] text-gray-400">{{account.created_at|date:"d M Y"}}</p>
                 </div>
-                {% empty %}
-                    <h5 class="text-sm text-gray-400">You have no transactions</h5>
-                {% endfor %}
+                {% if transaction.type == 1 %}
+                <p class="text-sm font-semibold text-green-600">+${{transaction.amount}}</p>
+                {% else %}
+                    <p class="text-sm font-semibold text-red-600">-${{transaction.amount}}</p>
+                {% endif %}
             </div>
         </div>
-    </div>
+        {% empty %}
+            <h5 class="text-sm text-gray-400">You have no transactions</h5>
+        {% endfor %}
 {%endblock%}
