--- a/templates/bottombar.html
+++ b/templates/bottombar.html
@@ -1,4 +1,4 @@
-<nav class="flex flex-row w-screen fixed bottom-0 bg-white shadow-main py-4">
+<nav class="flex flex-row w-screen fixed bottom-0 bg-white shadow-main lg:hidden py-4">
     <ul id="menu-items" class="flex flex-row w-full justify-around">
       <li class="active-menu-item">
         <a href="/dashboard/"><i class="fa-solid fa-house text-2xl"></i></a>
@@ -10,10 +10,10 @@
        <a href="/transfer/"> <i id="transfer" class="fa-solid fa-money-bill-transfer text-2xl"></i></a>
       </li>
       <li class="menu-item">
-        <a href="/profile/"><i id="profile" class="fa-solid fa-user text-2xl"></i></a>
+        <a href="/loans"><i id="loans" class="fa-solid fa-sack-dollar text-2xl"></i></a>
       </li>
       <li class="menu-item">
-        <a href="/settings"><i id="settings" class="fa-solid fa-gear text-2xl"></i></a>
+        <a href="/profile/"><i id="profile" class="fa-solid fa-user text-2xl"></i></a>
       </li>
     </ul>
   </nav>
