--- a/templates/main.html
+++ b/templates/main.html
@@ -22,17 +22,18 @@
   </head>
   <body>
     <div class="w-screen h-screen bg-ghostwhite">
-      <div class="flex flex-col h-full w-full px-6">
+      <div class="flex flex-col lg:flex-row h-full w-full items-center lg:items-start">
         {% include "header.html" %}
-        <div class="pb-20">
+        {% if user.is_authenticated %}
+          {% include 'sidebar.html' %}
+        {% endif %}
+        <div class="pb-20 lg:pt-8 px-6 max-w-3xl w-full lg:mx-auto">
           {%block content%}
-        
           {%endblock%}
         </div>
       </div>
     </div>
     {% if user.is_authenticated %}
-      {% include 'sidebar.html' %}
       {% include 'bottombar.html' %}
     {% endif %}
   </body>
