Refactor auth templates

--- a/authsystem/templates/authsystem/sign_up.html
+++ b/authsystem/templates/authsystem/sign_up.html
@@ -1,7 +1,7 @@
 {%extends 'main.html'%}
 
 {% block content%}
-      <div class="h-full w-full lg:w-1/2">
+      <div class="h-full w-full">
         <div class="flex flex-col justify-center gap-4">
             <h1 class="text-3xl font-semibold">Welcome to Bank Buddy</h1>
             <p class="text-sm text-gray-500">Welcome to Bank Buddy! Please enter your details</p>
