--- a/base/templates/base/dashboard.html
+++ b/base/templates/base/dashboard.html
@@ -10,7 +10,7 @@
         <h2 class="text-xl text-white font-semibold">{{account.name}}</h2>
         <div>
             <p class="text-[12px] text-white font-light">Total balance</p>
-            <h3 class="text-lg text-white font-semibold">{{account.balance}}</h3>
+            <h3 class="text-lg text-white font-semibold">${{account.balance}}</h3>
         </div>
     </a>
     {% else %}
