--- a/templates/bottombar.html
+++ b/templates/bottombar.html
@@ -1,6 +1,6 @@
 <nav class="flex flex-row w-screen fixed bottom-0 bg-white shadow-main lg:hidden py-4">
     <ul id="menu-items" class="flex flex-row w-full justify-around">
-      <li class="active-menu-item">
+      <li class="menu-item">
         <a href="/dashboard/"><i class="fa-solid fa-house text-2xl"></i></a>
       </li>
       <li class="menu-item">
