--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -4,7 +4,7 @@
   </div>
   <ul id="menu-items" class="flex flex-col gap-10 h-full my-12 justify-between">
    <div class="flex flex-col gap-10">
-    <li class="active-menu-item">
+    <li class="menu-item">
       <a href="/dashboard/" class="flex flex-row gap-2 items-center hover:text-primary duration-300 transition-all">
         <i class="fa-solid fa-house"></i>
         <p class="text-md">Dashboard</p>
