Remove transaction amount prefix

--- a/base/templates/base/account_details.html
+++ b/base/templates/base/account_details.html
@@ -39,9 +39,9 @@
             <p class="text-[12px] text-gray-400">{{account.created_at|date:"d M Y"}}</p>
         </div>
         {% if transaction.type == 1 %}
-            <p class="text-sm font-semibold text-green-600">+${{transaction.amount}}</p>
+            <p class="text-sm font-semibold text-green-600">${{transaction.amount}}</p>
         {% else %}
-            <p class="text-sm font-semibold text-red-600">-${{transaction.amount}}</p>
+            <p class="text-sm font-semibold text-red-600">${{transaction.amount}}</p>
         {% endif %}
     </div>
     {% endfor %}
