--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer components {
-  .active-menu-item {
+  .menu-item.active {
     @apply text-primary;
   }
   .menu-item {
