--- a/templates/main.html
+++ b/templates/main.html
@@ -27,7 +27,7 @@
         {% if user.is_authenticated %}
           {% include 'sidebar.html' %}
         {% endif %}
-        <div class="pb-20 lg:pt-8 px-6 max-w-3xl w-full lg:mx-auto">
+        <div class="pb-20 lg:pt-8 px-6 max-w-3xl w-full h-full lg:mx-auto">
           {%block content%}
           {%endblock%}
         </div>
