Restyle input fields and add LoanForm

--- a/base/templates/base/account_create.html
+++ b/base/templates/base/account_create.html
@@ -12,6 +12,6 @@
             <label class="text-[12px] font-semibold" for="name">Type</label>
             {{form.type}}
         </div>
-        <button type="submit" class="w-full bg-primary text-white py-2 rounded">Save</button>
+        <button type="submit" class="w-full bg-primary text-white py-2 rounded-lg">Save</button>
     </form>
 {% endblock %}
