--- a/templates/main.html
+++ b/templates/main.html
@@ -13,6 +13,11 @@
     <script src="{% static 'js/dashboard.js' %}"></script>
     <script src="{% static 'js/transfer.js' %}"></script>
     <link
+      href="{% static 'css/style.css' %}"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
       href="{% static 'fontawesomefree/css/all.min.css' %}"
       rel="stylesheet"
       type="text/css"
