--- a/base/templates/base/account_list.html
+++ b/base/templates/base/account_list.html
@@ -1,4 +1,5 @@
 {% extends 'main.html' %} {% block content%}
+<div class="flex flex-col h-full relative">
     <h1 class="text-2xl font-semibold">Accounts</h1>
     <div class="h-full overflow-auto">
       {% for account in accounts%}
@@ -16,7 +17,8 @@
         <p class="text-sm text-gray-400">You have no accounts</p>
       {% endfor %}
     </div>
-    <a href="/accounts/new" class="bg-primary fixed bottom-20 right-6 flex items-center justify-center rounded-full w-12 h-12 z-10 shadow-2xl">
-      <i class="fa-solid fa-plus text-2xl text-white"></i>
+    <a href="/accounts/new" class="bg-primary absolute bottom-0 right-0 flex items-center justify-center rounded-full w-16 h-16 z-10 shadow-2xl">
+      <i class="fa-solid fa-plus text-3xl text-white"></i>
     </a>
+  </div>
 {% endblock content %}
