--- a/base/templates/base/transaction_create.html
+++ b/base/templates/base/transaction_create.html
@@ -12,13 +12,11 @@
             {% endfor %}
         </div>
         <div class="flex flex-col gap-2">
-            <div>
-                <label class="text-[12px] font-bold" for="to_account">To account</label>
+            <label class="text-[12px] font-bold" for="to_account">To account</label>
                 {{form.to_account}}
                 {% for error in form.to_account.errors  %}
                 <p class="text-red-500 text-[12px]">{{error}}</p>
             {% endfor %}
-            </div>
             <div class="flex flex-row items-center gap-2">
                 <input class="w-3 h-3 rounded" type="checkbox" id="external" >
                 <label class="text-sm" for="external">External transfer</label>
@@ -40,6 +38,6 @@
             <label class="text-[12px] font-bold" for="message">Message to receiver</label>
             {{form.message}}
         </div>
-        <button type="submit" class="w-full bg-primary text-white py-2 rounded">Transfer money</button>
+        <button type="submit" class="w-full bg-primary text-white py-2 rounded-lg">Transfer money</button>
     </form>
 {% endblock %}
