--- a/base/templates/base/dashboard.html
+++ b/base/templates/base/dashboard.html
@@ -17,36 +17,36 @@
         <a class="text-primary text-sm" href="/accounts/new">Create an account</a>
     {% endif %}
     <h1 class="text-2xl font-semibold mt-4">Transactions</h1>
-    <div id="transaction-options" class="flex flex-row gap-4 mt-2">
-        <a href="/dashboard/" id="all-transactions" class="relative text-sm font-normal" href="#">
+    <div class="flex flex-row gap-4 mt-2">
+        <a href="/dashboard/" id="all-transactions" class="transaction-option relative text-sm font-normal" href="#">
             <h5>All</h5>
         </a>
-        <a href="/dashboard/?q=credit" id="credit-transactions" class="relative text-sm font-normal" href="#">
+        <a href="/dashboard/?q=credit" id="credit-transactions" class="transaction-option relative text-sm font-normal" href="#">
             <h5>Incoming</h5>
         </a>
-        <a href="/dashboard/?q=debit" id="debit-transactions" class="relative text-sm font-normal" href="#">
+        <a href="/dashboard/?q=debit" id="debit-transactions" class="transaction-option relative text-sm font-normal" href="#">
             <h5>Expenses</h5>
         </a>
     </div>
     <div class="flex flex-col gap-4 mt-4">
         {% for transaction in transactions %}
-        <div class="flex flex-row items-center justify-between">
-            <div class="flex flex-row w-full items-center gap-4">
-                <i class="fa-solid fa-credit-card"></i>
-                <div class="w-full">
-                    <h4 class="text-sm font-semibold">{{transaction.message}}</h4>
-                    <div class="flex flex-row gap-4">
-                        <p class="text-[12px] text-gray-400">{{transaction.account.name}}</p>
-                        <p class="text-[12px] text-gray-400">{{transaction.created_at|date:"d M Y"}}</p>
+            <div class="flex flex-row items-center justify-between">
+                <div class="flex flex-row w-full items-center gap-4">
+                    <i class="fa-solid fa-credit-card"></i>
+                    <div class="w-full">
+                        <h4 class="text-sm font-semibold">{{transaction.message}}</h4>
+                        <div class="flex flex-row gap-4">
+                            <p class="text-[12px] text-gray-400">{{transaction.account.name}}</p>
+                            <p class="text-[12px] text-gray-400">{{transaction.created_at|date:"d M Y"}}</p>
+                        </div>
                     </div>
+                    {% if transaction.type == 1 %}
+                    <p class="text-sm font-semibold text-green-600">${{transaction.amount}}</p>
+                    {% else %}
+                        <p class="text-sm font-semibold text-red-600">${{transaction.amount}}</p>
+                    {% endif %}
                 </div>
-                {% if transaction.type == 1 %}
-                <p class="text-sm font-semibold text-green-600">+${{transaction.amount}}</p>
-                {% else %}
-                    <p class="text-sm font-semibold text-red-600">-${{transaction.amount}}</p>
-                {% endif %}
             </div>
-        </div>
         {% empty %}
             <h5 class="text-sm text-gray-400">You have no transactions</h5>
         {% endfor %}
