--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 @layer components {
-  .active-menu-item {
+  .menu-item.active {
     @apply text-primary;
   }
   .menu-item {
     @apply text-blackTransparent;
   }
-  .transaction-option-active {
+  .transaction-option.active {
     @apply before:absolute before:-bottom-px before:bg-black before:w-full before:h-px;
   }
 }
