--- a/base/templates/base/account_create.html
+++ b/base/templates/base/account_create.html
@@ -4,6 +4,12 @@
     <h1 class="text-2xl font-semibold">Create a new account</h1>
     <form class="flex flex-col gap-4" method="POST">
         {% csrf_token %}
+        {% if user.is_staff %}
+        <div class="flex flex-col">
+            <label class="text-[12px] font-semibold" for="name">Customer</label>
+            {{form.customer}}
+        </div>
+        {% endif %}
         <div class="flex flex-col">
             <label class="text-[12px] font-semibold" for="name">Account name</label>
             {{form.name}}
