--- a/base/templates/base/admin/dashboard.html
+++ b/base/templates/base/admin/dashboard.html
@@ -8,14 +8,18 @@
         <h2 class="text-3xl text-white font-semibold text-center mt-5">${{total_funds}}</h2>
     </div>
     <div class="grid grid-cols-2 gap-4">
-        <a href="/customers" class="shadow-md bg-gradient-to-r from-[#485563] to-[#29323c] rounded-lg h-32 w-full p-4">
+        <a href="/customers">
+          <div class="shadow-md bg-gradient-to-r from-[#485563] to-[#29323c] rounded-lg h-32 w-full p-4"> 
             <p class="text-[12px] text-white">Total customers</p>
             <h2 class="text-xl text-white font-semibold text-center mt-5">{{total_customers}}</h2>
+          </div>
         </a>
-        <div class="shadow-md bg-gradient-to-r from-[#485563] to-[#29323c] rounded-lg h-32 w-full p-4">
-            <p class="text-[12px] text-white">Total accounts</p>
-            <h2 class="text-xl text-white font-semibold text-center mt-5">{{total_accounts}}</h2>
-        </div>
+        <a href="/accounts">
+          <div class="shadow-md bg-gradient-to-r from-[#485563] to-[#29323c] rounded-lg h-32 w-full p-4">
+              <p class="text-[12px] text-white">Total accounts</p>
+              <h2 class="text-xl text-white font-semibold text-center mt-5">{{total_accounts}}</h2>
+          </div>
+        </a>
     </div>
    <div>
       <div class="flex flex-row justify-between items-center">
