--- a/base/templates/base/admin/customer_list.html
+++ b/base/templates/base/admin/customer_list.html
@@ -2,7 +2,10 @@
 
 
 {% block content %}
+   <div class="flex flex-row justify-between items-center">
     <h1 class="text-2xl font-semibold">Customers</h1>
+    <a href="/customers/new" class="text-[12px] bg-primary rounded-lg w-6 h-6 flex items-center justify-center"><i class="fa solid fa-plus text-white"></i></a>
+   </div>
    <div id="customer-list" class="grid gap-4 mt-4">
     {% for customer in customers %}
    <a href="/customers/{{customer.id}}">
