--- a/base/templates/base/transaction_create.html
+++ b/base/templates/base/transaction_create.html
@@ -15,8 +15,8 @@
             <label class="text-[12px] font-bold" for="to_account">To account</label>
                 {{form.to_account}}
                 {% for error in form.to_account.errors  %}
-                <p class="text-red-500 text-[12px]">{{error}}</p>
-            {% endfor %}
+                    <p class="text-red-500 text-[12px]">{{error}}</p>
+                {% endfor %}
             <div class="flex flex-row items-center gap-2">
                 <input class="w-3 h-3 rounded" type="checkbox" id="external" >
                 <label class="text-sm" for="external">External transfer</label>
@@ -26,6 +26,7 @@
             <label class="text-[12px] font-bold" for="bank">Bank</label>
             {{form.bank}}
         </div>
+     
         <div class="flex flex-col">
             <label class="text-[12px] font-bold" for="amount">Amount</label>
             {{form.amount}}
@@ -37,6 +38,17 @@
         <div class="flex flex-col">
             <label class="text-[12px] font-bold" for="message">Message to receiver</label>
             {{form.message}}
+        </div>
+        <div class="flex flex-row items-center gap-2">
+            <input class="w-3 h-3 rounded" type="checkbox" id="scheduled" >
+            <label class="text-sm" for="scheduled">Scheduled transaction</label>
+        </div>
+        <div id="scheduled-date" class="flex-col hidden">
+            <label class="text-[12px] font-bold" for="scheduled_date">Scheduled date</label>
+            {{form.scheduled_date}}
+            {% for error in form.scheduled_date.errors  %}
+                <p class="text-red-500 text-[12px]">{{error}}</p>
+            {% endfor %}
         </div>
         <button type="submit" class="w-full bg-primary text-white py-2 rounded-lg">Transfer money</button>
     </form>
