Minor refac to sidebar

--- a/templates/sidebar.admin.html
+++ b/templates/sidebar.admin.html
@@ -1,7 +1,7 @@
 <nav class="w-48 h-screen px-6 bg-white shadow-main hidden lg:flex lg:flex-col">
-    <div class="h-20 mt-8">
+    <div class="flex flex-col items-center h-20 mt-8">
       <h1 class="text-2xl text-primary">Bank buddy</h1>
-      <p>Admin portal</p>
+      <p class="text-[12px]">Admin portal</p>
     </div>
     <ul id="menu-items" class="flex flex-col gap-10 h-full my-12 justify-between">
      <div class="flex flex-col gap-10">
