--- a/authsystem/templates/authsystem/sign_in.html
+++ b/authsystem/templates/authsystem/sign_in.html
@@ -4,7 +4,7 @@
       <div class="h-full w-full">
          <div class="flex flex-col justify-center gap-4">
             <h1 class="text-3xl font-semibold">Welcome back</h1>
-            <p class="text-sm text-gray-500">Welcome back! Please enter your details</p>
+            <p class="text-sm text-gray-500">Please enter your details</p>
             <form class="flex flex-col gap-2" method="POST">
                {% csrf_token %}
                <div class="flex flex-col gap-4">
