--- a/authsystem/templates/authsystem/sign_up.html
+++ b/authsystem/templates/authsystem/sign_up.html
@@ -4,7 +4,7 @@
       <div class="h-full w-full">
         <div class="flex flex-col justify-center gap-4">
             <h1 class="text-3xl font-semibold">Welcome to Bank Buddy</h1>
-            <p class="text-sm text-gray-500">Welcome to Bank Buddy! Please enter your details</p>
+            <p class="text-sm text-gray-500">Please enter your details</p>
             <form class="flex flex-col gap-2" method="POST">
                {% csrf_token %}
                <div class="flex flex-col gap-4">
@@ -44,7 +44,7 @@
                      {% endfor %}
                   </div>
                   <div class="flex flex-col">
-                     <label class="text-[12px] font-semibold" for="email">Password</label>
+                     <label class="text-[12px] font-semibold" for="password">Password</label>
                      {{form.password}}
                      {% for error in form.password.errors %}
                            <p class="text-red-500 text-[12px]">{{error}}</p>
