--- a/templates/sidebar.admin.html
+++ b/templates/sidebar.admin.html
@@ -29,6 +29,14 @@
           <p class="text-md">Loans</p>
         </a>
       </li>
+      {% if user.is_superuser %}
+        <li class="menu-item">
+          <a href="/employees/" class="flex flex-row gap-2 items-center hover:text-primary duration-300 transition-all">
+            <i class="fa-solid fa-user-tie"></i>
+            <p class="text-md">Employees</p>
+          </a>
+        </li>
+      {% endif %}
       <li class="menu-item">
         <a href="/profile/" class="flex flex-row gap-2 items-center hover:text-primary duration-300 transition-all">
           <i class="fa-solid fa-user"></i>
