--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,9 @@
 <div class="flex flex-row w-full items-center justify-between py-4 lg:hidden px-6">
-    <a href="/dashboard"><h1 class="text-lg font-semibold text-primary">Bank Buddy</h1></a>
+    {% if user.is_authenticated %}
+        <a href="/dashboard"><h1 class="text-lg font-semibold text-primary">Bank Buddy</h1></a>
+    {% else %}
+        <a href="/signin"><h1 class="text-lg font-semibold text-primary">Bank Buddy</h1></a>
+    {% endif %}
     {% if user.is_authenticated %}
         <a href="/signout"><i class="fa-solid fa-arrow-right-from-bracket text-gray-400 hover:text-primary duration-300 transition-all"></i></a>
     {% endif %}
